# cs225a_project

./: .gitignore  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  dump.rdb
Gordon_the_robot/: CMakeLists.txt  Makefile  cmake_install.cmake
Gordon_the_robot/Gordon_the_robot/: Makefile  cmake_install.cmake
Gordon_the_robot/model/kitchen_objects/meshes/collision/: CheeseTwoCollision.mtl  Spatula.mtl  SpatulaBaseAndCenter.mtl  breadCollision.mtl
Gordon_the_robot/model/kitchen_objects/meshes/visual/: BottomBun.mtl  Cheese.mtl  CheeseTwo.mtl  GrillCharcoal.mtl  GrillCheese.mtl  Lettuce.mtl  MarbleCountertopBottom.mtl  MarbleCountertopTop.mtl  Spatula.mtl  SpatulaVisual.mtl  TallGrill.mtl  Tomato.mtl  TopBun.mtl  bread.mtl
Gordon_the_robot/model/kitchen_objects/meshes/visual/BlenderFiles/: BottomBun.blend  BottomBun.blend1  MarbleCountertopBottom.blend  MarbleCountertopBottom.blend1  MarbleCountertopTop.blend  MarbleCountertopTop.blend1  bread.blend  bread.blend1  breadCollision.blend  cheese.blend  cheese.blend1  cheeseCollision.blend  lettuce.blend  lettuce.blend1  spatula.blend  tomato.blend
Gordon_the_robot/model/kitchen_objects/meshes/visual/old/: CountertopBlue.mtl  CountertopMarble.mtl
Gordon_the_robot/model/test_objects/meshes/visual/: ground.mtl  ground2.mtl  ground3.mtl
Gordon_the_robot/src/: controller.cpp  controller_Gordon.cpp  controller_demo.cpp  simviz.cpp  simviz_demo.cpp  state_machine.cpp
Gordon_the_robot/urdf_files/: GrillCheese.urdf  bottom_bun.urdf  burger.urdf  cheese.urdf  lettuce.urdf  mmp_panda.urdf  panda_collision.urdf  spatula.urdf  tomato.urdf  top_bun.urdf  world.urdf  world_panda_gripper.urdf
